# mcp

./: CLAUDE.md  README.md  project_structure.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  page.tsx
frontend/src/components/: ChatContainer.tsx  ExecutionTrace.tsx  MessageBubble.tsx  Sidebar.tsx
mcp/: pyproject.toml
mcp/notion_mcp/: __init__.py  models.py
mcp/notion_mcp/api/: session_store.py
mcp/notion_mcp/notion/: __init__.py
mcp/notion_mcp/tools/: __init__.py  blocks.py  databases.py  pages.py
notion_mcp/: chat.py  mcp_server.py
notion_mcp/api/: __init__.py  app.py  mcp_bridge.py  orchestrator.py
notion_mcp/notion/: mcp_client.py
notion_mcp/tools/: blocks.py  comments.py  databases.py  pages.py  search.py  users.py
