[project]
name = "notion-mcp-server"
version = "0.2.0"
description = "MCP server for Notion API — exposes Notion as AI-accessible tools, with a FastAPI orchestrator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "google-genai>=2.6.0",
    "mcp[cli]>=1.0.0",
    "notion-client>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.34.0",
]

[project.scripts]
notion-mcp-server = "notion_mcp.mcp_server:main"
notion-chat = "notion_mcp.chat:main"
notion-api = "notion_mcp.api.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["notion_mcp"]
